--- a/main.html
+++ b/main.html
@@ -57,7 +57,22 @@
         if (callNow) func.apply(context, args);
       };
     }
-
+	  function addSlide(){
+		  var scrolledImages = document.querySelectorAll('.slide-in');
+		  scrolledImages.forEach((img) => {
+			  var scrolledHeight = window.scrolly + window.innerHeight - img.height / 2;
+			  var imageBottomHeight = img.offsetTop + img.height;
+			  var isImageHalfScrolled = scrolledHeight > img.offsetTop;
+			  var isImageFullyScrolled = window.scrolly > imageBottomHeight;
+			  if (isImageHalfScrolled && !isImageFullyScrolled) {
+				  img.classList.add("active");
+			  }
+			  else{
+				  img.classList.remove("active");
+			  }
+		  });
+	  }
+	  window.addEventListener('scroll', debounce(addSlide));
   </script>
 
   <style>
